# ParallelComputing

./: .gitignore  README.md  batchjob_claix_init.sh
FinalProject/: Task3.1_compiler_flags_timings.xlsx  Task3.2_openMP_timings.xlsx  Task3.3_mpi_timings.xlsx
FinalProject/Online_Submission/: CMakeLists.txt  coarse-mesh.vtu  coarse-mesh_0.vtu  fine-mesh.vtu  fine-mesh_0.vtu  medium-mesh.pvtu  medium-mesh.vtu  medium-mesh_0.vtu  mpi  openmpA  openmpB  output_medium_8CPU.28753546.txt  serial  settings.coarse.in
FinalProject/Online_Submission/Task_OpenMP/: out_1CPU_A.28744272.txt  out_1CPU_A.28744322.txt  out_1CPU_A.28744323.txt  out_1CPU_B.28744352.txt  out_1CPU_B.28744353.txt  out_1CPU_B.28744354.txt  out_2CPU_A.28744357.txt  out_2CPU_A.28744358.txt  out_2CPU_A.28744359.txt  out_2CPU_B.28744360.txt  out_2CPU_B.28744361.txt  out_2CPU_B.28744362.txt  out_4CPU_A.28744363.txt  (+5 more)
Homework_1/code/: CMakeLists.txt  postProcessor.cpp  postProcessor.h  settings.cpp  settings.h  tri.cpp  tri.h
Homework_1/code/ml/: tri_ml.cpp
Homework_1/code/test/: read-mesh  settings.disk-coarse.in  settings.disk-fine.in  settings.disk-finest.in
Homework_2/HW2_unrolled/: T_coarse.csv  TemperatureDist.eps  out_coarse.txt  out_fine.txt  post.py
Homework_2/code/: CMakeLists.txt  postProcessor.cpp  solver.cpp  tri.cpp  tri.h
Homework_3/: Timings.xlsx  post.py
Homework_3/skeleton/: 2D_Unsteady_Diffusion.cpp  CMakeLists.txt  README  constants.h  solver.cpp  solver.h
Homework_3/solutionRed/: CMakeLists.txt  solver.cpp
Homework_4/skeleton/: settings.h  solver.cpp  solver.h  tri.cpp
(+565 files in other folders)
